# haskell_education

./: README.md
arithmetic_progr/: arithm.cabal
arithmetic_progr/.stack-work/: stack.sqlite3
arithmetic_progr/.stack-work/install/x86_64-linux/09f700479c383965e131bfc079a5aefe826c42142e06a3472e2e78b8bb72dec2/8.8.3/lib/x86_64-linux-ghc-8.8.3/arithm-0-ET9X2lfrJne5rHgPytokOi/: Arithmetic.hi
arithmetic_progr/.stack-work/install/x86_64-linux/09f700479c383965e131bfc079a5aefe826c42142e06a3472e2e78b8bb72dec2/8.8.3/pkgdb/: arithm-0-ET9X2lfrJne5rHgPytokOi.conf  package.cache
arithmetic_progr/exe/: Main.hs
arithmetic_progr/lib/: Arithmetic.hs
arithmetic_progr/test/: Tests.hs
first_project/: sq-test.cabal
first_project/.stack-work/: stack.sqlite3
first_project/.stack-work/install/x86_64-linux-tinfo6/81c16d674ac60006090b74fa58385535fa6984460ac6f81d3d3bdd91e4a6db7f/8.8.3/lib/x86_64-linux-ghc-8.8.3/sq-test-0-FPV57fVLLpO1Nuow8Cj1oS/: Sqeq.dyn_hi
first_project/.stack-work/install/x86_64-linux-tinfo6/81c16d674ac60006090b74fa58385535fa6984460ac6f81d3d3bdd91e4a6db7f/8.8.3/pkgdb/: package.cache  sq-test-0-FPV57fVLLpO1Nuow8Cj1oS.conf
first_project/.stack-work/install/x86_64-linux/09f700479c383965e131bfc079a5aefe826c42142e06a3472e2e78b8bb72dec2/8.8.3/pkgdb/: package.cache  sq-test-0-1UoIO9eSQGVLBndnXZti1N.conf  sq-test-0-EfZPsiaTSYoCBCVJK5HYVC.conf
first_project/exe/: Main.hs
first_project/lib/: Sqeq.hs
first_project/test/: Tests.hs
types/: hello.hs
(+9 files in other folders)
