cabal-version: 2.2

name: sq-test
version: 0

library
  build-depends: base
  default-language: Haskell2010
  exposed-modules: Sqeq
  hs-source-dirs: lib

executable sq-test
  build-depends: base, sq-test
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: exe

test-suite tests
  build-depends: base
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: test